# gcython2

./: .coverage  .gitignore  Makefile  build.sh  cat  gcscript.tx  pyproject.toml  requirements.txt
docs/: api.rst  conf.py  index.rst  requirements.txt
docs/_build/: .buildinfo  .buildinfo.bak  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree
docs/_build/_sources/: index.rst.txt
docs/gcython/: about.rst
src/gcscript/: ClassMethod.py  MethodCall.py  __init__.py  compiler.py  gcscript.tx
src/gcscript_editor/: __main__.py
src/gcscript_editor/core/: app.py  compile_screen.py  editor.py  editor_screen.py  project_explorer.py  project_explorer.tcss  prompt.py
src/gcscript_editor/tree-sitter-gcscript/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
src/gcscript_editor/tree-sitter-gcscript/bindings/c/: tree-sitter-gcscript.pc.in
src/gcscript_editor/tree-sitter-gcscript/bindings/go/: binding.go  binding_test.go
src/gcscript_editor/tree-sitter-gcscript/bindings/node/: binding.cc  index.js
src/gcscript_editor/tree-sitter-gcscript/bindings/python/tests/: test_binding.py
src/gcscript_editor/tree-sitter-gcscript/bindings/python/tree_sitter_gcscript/: __init__.py  binding.c
src/gcscript_editor/tree-sitter-gcscript/bindings/rust/: build.rs  lib.rs
src/gcscript_editor/tree-sitter-gcscript/bindings/swift/TreeSitterGcscript/: gcscript.h
src/gcscript_editor/tree-sitter-gcscript/bindings/swift/TreeSitterGcscriptTests/: TreeSitterGcscriptTests.swift
src/gcscript_editor/tree-sitter-gcscript/src/: grammar.json  node-types.json  parser.c
src/gcython/: __init__.py  __main__.py
src/gcython/VM/: IVMObject.py  Pointer.py  VM.py  VMClass.py  Var.py  __init__.py
src/gcython/core/: IObject.py  __init__.py
src/gcython/expressions/: Action.py  Num.py  Point.py  Pointer.py  Var.py  (+1 more)
src/gcython_devserver/: __init__.py  __main__.py  index.css  index.html  index.js
tests/: test.gc  test_gcscript.py  test_import.py
(+13 files in other folders)
