[project]
name = "gcython"
version = "2.0.0"
dynamic = ["dependencies"]

[build-system]
requires = ["setuptools >= 80.9.0"]
build-backend = "setuptools.build_meta"

[tools.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.entry-points.textx_languages]
gcscript = "gcscript:gcscript_lang"

[project.entry-points.textx_generators]
latex = "gcscript:gcscript_latex_generator"